Add markup and styles for mobile version

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,5 +1,9 @@
 .catalog {
   background-color: $white;
+  margin: auto;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 31px;
 }
 
 @media (min-width: $tablet-width) {
