--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,4 +1,9 @@
 .logo {
+  display: block;
+  width: 90px;
+  margin: 0 auto;
+  padding: 22px 0 30px;
+
   &__image {
     width: 86px;
     height: 35px;
