--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -1,7 +1,18 @@
+:root {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
   min-width: 320px;
   margin: 0;
   padding: 0;
   background-color: $white;
   font-family: "Open Sans", "Arial", sans-serif;
+  overflow-x: hidden;
 }
