--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,6 +3,7 @@
 @import "fonts.scss";
 @import "mixins.scss";
 @import "scaffolding.scss";
+@import "blocks/button.scss";
 @import "blocks/catalog-item.scss";
 @import "blocks/catalog.scss";
 @import "blocks/category.scss";
