--- a/source/sass/blocks/catalog-item.scss
+++ b/source/sass/blocks/catalog-item.scss
@@ -1,15 +1,25 @@
 .catalog-item {
-
   background-color: $white;
+  margin-top: 30px;
 
-  &__title {
-    display: flex;
-    flex-direction: column;
+  &__img {
+    margin-bottom: 0;
+    display: block;
   }
 
   &__features {
     border: 1px solid $light-gray;
     background-color: $white;
+    display: flex;
+    flex-direction: column;
+    padding-left: 28px;
+    padding-right: 35px;
+    margin-top: 0;
+  }
+
+  &__title {
+    display: flex;
+    flex-direction: column;
   }
 
   &__title-name {
@@ -17,6 +27,10 @@
     font-size: 17px;
     font-weight: 700;
     line-height: 1.41;
+    text-decoration: none;
+    padding: 0;
+    margin: 0;
+    margin-top: 23px;
   }
 
   &__title-description {
@@ -24,6 +38,19 @@
     font-size: 13px;
     font-weight: 400;
     line-height: 2.31;
+    padding: 0;
+    margin: 0;
+    padding-top: 5px;
+  }
+
+  &__price {
+    display: flex;
+    width: 205px;
+    justify-content: space-between;
+    border-top: 1px solid $light-gray;
+    min-height: 72px;
+    align-items: center;
+    margin-top: 19px;
   }
 
   &__price-rub {
@@ -34,7 +61,13 @@
   }
 
   &__price-icon {
+    background-image: url("/img/icon-cart.svg");
+    background-repeat: no-repeat;
     opacity: 0.2;
+    width: 20px;
+    height: 19px;
+    display: block;
+    cursor: pointer;
   }
 }
 
