--- a/source/sass/blocks/color.scss
+++ b/source/sass/blocks/color.scss
@@ -1,22 +1,48 @@
 .color {
-  &__checkbox-item {
-    width: 40px;
-    height: 39px;
-    border: 2px solid $dark-gray;
+  border: 0 none;
 
-    &:checked {
-      width: 22px;
-      height: 16px;
-    }
+  &__checkbox {
+    padding-left: 60px;
+    margin-bottom: 43px;
   }
 
-  &__label {
+  &__checkbox-item {
+    display: none;
+  }
+
+  &__label-checkbox {
     color: $text-black;
     font-size: 17px;
     font-weight: 700;
     line-height: 1.06;
+    display: block;
+    cursor: pointer;
+    position: relative;
+  }
+
+  &__checkbox-item + label::before {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border: 2px solid $dark-gray;
+    top: -9px;
+    left: -55px;
+    content: "";
+  }
+
+  &__checkbox-item:checked + label::after {
+    background-image: url("/img/icon-tick.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    position: absolute;
+    content: "";
+    top: -3px;
+    left: -46px;
+    width: 22px;
+    height: 22px;
   }
 }
+
 
 @media (min-width: $tablet-width) {
   .color {
