--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,9 +1,22 @@
 .features {
+  &__container {
+    width: 320px;
+    padding: 0;
+    padding-bottom: 10px;
+    position: relative;
+  }
+
   &__title {
     color: $text-black;
     font-size: 25px;
     font-weight: 700;
     line-height: 1.2;
+    margin: 0;
+    padding: 0;
+    padding-top: 28px;
+    padding-bottom: 20px;
+    padding-left: 30px;
+    margin-left: -2px;
   }
 }
 
