--- a/source/sass/blocks/main-menu.scss
+++ b/source/sass/blocks/main-menu.scss
@@ -1,7 +1,18 @@
 .main-menu {
   &__button-icon {
-    width: 20px;
-    height: 14px;
+    width: 30px;
+    height: 30px;
+    background-image: url("/img/icon-menu-open.svg");
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    position: absolute;
+    top: 24px;
+    right: 26px;
+    padding: 0;
+    z-index: 2;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
   }
 
   &__list {
