--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,7 +1,18 @@
 $footer-bgcolor: #f1f1f1;
 
 .page-footer {
+  width: 100%;
+  display: flex;
   background-color: $footer-bgcolor;
+
+  &__wrapper {
+    width: 320px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+    padding-top: 23px;
+  }
 }
 
 @media (min-width: $tablet-width) {
