--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,7 +1,13 @@
 .page-header {
   background-color: $white;
-  width: 320px;
-  height: 395px;
+
+  &__container {
+    width: 100%;
+    height: 79px;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0 1px 0 $light-gray, inset 0 1px 0 $light-gray;
+  }
 }
 
 @media (min-width: $tablet-width) {
