--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -1,12 +1,13 @@
 .review {
   &__text {
-    width: 255px;
-    height: 252px;
     color: $dark-gray;
-
     font-size: 15px;
     font-weight: 400;
     line-height: 2;
+    margin: 0;
+    margin-bottom: 15px;
+    padding: 0;
+    padding-top: 24px;
   }
 
   &__author {
@@ -20,12 +21,18 @@
   &__author-name {
     font-weight: 700;
     line-height: 1.41;
+    margin: 0;
+    padding: 0;
+    padding-top: 27px;
   }
 
   &__author-nickname {
     color: $dark-gray;
     font-weight: 400;
     line-height: 1.76;
+    padding: 0;
+    margin: 0;
+    padding-top: 3px;
   }
 }
 
