--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,17 +1,31 @@
 .social {
+  @include list;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  padding-left: 35px;
+
   &__link {
+    margin-right: 40px;
     background-repeat: no-repeat;
+    display: inline-block;
 
     &--instagram {
       background-image: url("/img/icon-insta.svg");
+      width: 22px;
+      height: 21px;
     }
 
     &--fb {
       background-image: url("/img/icon-fb.svg");
+      width: 15px;
+      height: 28px;
     }
 
     &--twitter {
       background-image: url("/img/icon-twitter.svg");
+      width: 23px;
+      height: 20px;
     }
   }
 }
