--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -1,1 +1,11 @@
-/*mixins*/
+@mixin list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+@mixin form-wrapper {
+  width: 320px;
+  margin-left: 0;
+  margin-right: 0;
+}
