Добавлены контейнеры для содержимого, исправлены стили, добавлен скрипт для выпадающего меню

--- a/source/sass/blocks/catalog-item.scss
+++ b/source/sass/blocks/catalog-item.scss
@@ -1,6 +1,7 @@
 .catalog-item {
   background-color: $white;
   margin-top: 30px;
+  padding-top: 3px;
 
   &__img {
     margin-bottom: 0;
@@ -15,6 +16,7 @@
     padding-left: 28px;
     padding-right: 35px;
     margin-top: 0;
+    padding-bottom: 2px;
   }
 
   &__title {
