--- a/source/sass/blocks/main-menu.scss
+++ b/source/sass/blocks/main-menu.scss
@@ -2,12 +2,12 @@
   &__button-icon {
     width: 30px;
     height: 30px;
-    background-image: url("/img/icon-menu-open.svg");
+    background-image: url("/img/icon-menu-close.svg");
     background-repeat: no-repeat;
     background-position: 50% 50%;
     position: absolute;
-    top: 24px;
-    right: 26px;
+    top: 15px;
+    right: 23px;
     padding: 0;
     z-index: 2;
     background-color: transparent;
@@ -16,7 +16,45 @@
   }
 
   &__list {
-    display: none;
+    @include list;
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    background-color: $light-gray;
+    text-decoration: none;
+    align-items: flex-start;
+  }
+
+  &--closed {
+    .main-menu__button-icon {
+      width: 30px;
+      height: 30px;
+      background-image: url("/img/icon-menu-open.svg");
+      background-repeat: no-repeat;
+      background-position: 50% 50%;
+      position: absolute;
+      top: 24px;
+      right: 26px;
+      padding: 0;
+      z-index: 2;
+      background-color: transparent;
+      border: none;
+      cursor: pointer;
+    }
+
+    .main-menu__list {
+      display: none;
+    }
+  }
+
+  &--nojs {
+    .main-menu__button-icon {
+      display: none;
+    }
+
+    .main-menu__list {
+      display: block;
+    }
   }
 }
 
