--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -10,5 +10,6 @@
   font-size: 17px;
   font-weight: 700;
   line-height: 1.18;
-  height: 52px;
+  text-transform: uppercase;
+  color: $text-black;
 }
