--- a/source/sass/blocks/category.scss
+++ b/source/sass/blocks/category.scss
@@ -11,6 +11,7 @@ $bg-mint: #149080;
     position: relative;
     display: flex;
     flex-direction: column;
+    margin-top: 8px;
   }
 
   &__item {
