--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,10 +1,5 @@
 .features {
-  &__container {
-    width: 320px;
-    padding: 0;
-    padding-bottom: 10px;
-    position: relative;
-  }
+  @include container;
 
   &__title {
     color: $text-black;
