--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -6,7 +6,11 @@
   padding-bottom: 55px;
 
   &__wrapper {
-    @include form-wrapper;
+    @include container;
+
+    &--note {
+      margin-top: 8px;
+    }
   }
 
   &__type {
@@ -14,6 +18,12 @@
     display: flex;
     position: relative;
     flex-wrap: wrap;
+    padding-left: 9px;
+    padding-bottom: 11px;
+  }
+
+  &__intro {
+    @include container;
   }
 
   &__intro-text {
@@ -22,10 +32,9 @@
     font-weight: 400;
     line-height: 1.85;
     width: 245px;
-    margin-top: 0;
+    margin-top: 23px;
     margin-right: auto;
     margin-bottom: 0;
-    margin-left: auto;
   }
 
   &__legend {
@@ -38,7 +47,7 @@
     width: 260px;
     padding: 0;
     margin: 0;
-    margin-bottom: 35px;
+    margin-bottom: 34px;
 
     &::after {
       content: "";
@@ -52,8 +61,9 @@
   }
 
   &__radio {
-    padding-left: 60px;
-    margin-bottom: 40px;
+    padding-left: 48px;
+    padding-right: 10px;
+    margin-bottom: 25px;
   }
 
   &__radio-button {
@@ -67,7 +77,7 @@
     border-radius: 50%;
     border: 2px solid $dark-gray;
     top: -9px;
-    left: -55px;
+    left: -60px;
     content: "";
   }
 
@@ -76,7 +86,7 @@
     position: absolute;
     width: 16px;
     height: 16px;
-    left: -43px;
+    left: -48px;
     top: 3px;
     background-color: $mint;
     border-radius: 50%;
@@ -92,15 +102,27 @@
     cursor: pointer;
   }
 
+  &__color {
+    padding: 0;
+    border: none;
+  }
+
   &__personal {
     border: none;
     padding-bottom: 12px;
+    padding-right: 0;
+    padding-left: 0;
+    padding-top: 0;
   }
 
   &__personal-wrapper {
     margin-bottom: 0;
     margin-left: 0;
     margin-right: 0;
+  }
+
+  &__title {
+    margin-bottom: 0;
   }
 
   &__personal-label {
@@ -125,16 +147,15 @@
     width: 260px;
     height: 38px;
     padding-bottom: 7px;
-    margin-bottom: 22px;
+    margin-bottom: 7px;
+  }
 
-
-    &::placeholder {
-      opacity: 0.3;
-      color: $dark-gray;
-      font-size: 17px;
-      font-weight: 400;
-      line-height: 1.06;
-    }
+  &::placeholder {
+    opacity: 0.3;
+    color: $dark-gray;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 1.06;
   }
 
   &__contact-wrapper {
@@ -144,10 +165,12 @@
   }
 
   &__tel {
+    width: 260px;
     border: none;
+    padding: 0;
 
     &__field {
-      padding-block-end: 25px;
+      padding-bottom: 25px;
     }
   }
 
@@ -155,6 +178,7 @@
     box-shadow: inset 0 -2px 0 $text-black;
     box-sizing: border-box;
     padding-right: 40px;
+    padding-left: 0;
     padding-bottom: 15px;
 
     &::placeholder {
@@ -167,7 +191,11 @@
   }
 
   &__email {
+    width: 260px;
     border: none;
+    margin-top: 8px;
+    padding: 0;
+    margin-bottom: 17px;
 
     &__field {
       padding-bottom: 25px;
@@ -191,6 +219,7 @@
 
   &__additional {
     border: none;
+    padding: 0;
   }
 
   &__additional-textarea {
@@ -220,7 +249,6 @@
     line-height: 1.14;
     margin-top: 0;
     margin-bottom: 32px;
-    margin-left: 15px;
   }
 
   &__submit-button {
@@ -229,6 +257,10 @@
     font-weight: 700;
     line-height: 0.94;
     text-transform: uppercase;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 
