--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,12 +1,11 @@
 $footer-bgcolor: #f1f1f1;
 
 .page-footer {
-  width: 100%;
+  @include container;
   display: flex;
   background-color: $footer-bgcolor;
 
   &__wrapper {
-    width: 320px;
     display: flex;
     flex-direction: column;
     align-items: center;
