--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,18 +1,27 @@
 .page-main {
   &__container {
+    @include container;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 320px;
     padding: 0;
-    margin: 0 auto;
     background-color: $gray;
   }
 
   &__header {
     background-color: $gray;
     max-width: 320px;
+    padding-bottom: 7px;
+    margin-left: auto;
+    margin-right: auto;
+
+    &--index {
+      background-image: url("/img/hero-mobile@1x.jpg");
+      background-repeat: no-repeat;
+      background-position: center -50px;
+      padding-top: 62px;
+    }
   }
 
   &__header-title {
@@ -28,13 +37,6 @@
     padding-bottom: 69px;
     padding-left: 0;
     padding-right: 0;
-
-
-    &--main {
-      background-image: url("/img/hero-mobile@1x.jpg");
-      background-repeat: no-repeat;
-      background-position: center -50px;
-    }
   }
 
   &__header-title span {
@@ -42,32 +44,32 @@
   }
 }
 
-@media (min-width: $tablet-width) {
-  .page-main {
-    &__header-title {
-      &--main {
-        width: 494px;
-        height: 95px;
-        color: $text-black;
-        font-size: 43px;
-        font-weight: 700;
-        line-height: 1.16;
-      }
-    }
-  }
-}
+// @media (min-width: $tablet-width) {
+//   .page-main {
+//     &__header-title {
+//       &--main {
+//         width: 494px;
+//         height: 95px;
+//         color: $text-black;
+//         font-size: 43px;
+//         font-weight: 700;
+//         line-height: 1.16;
+//       }
+//     }
+//   }
+// }
 
-@media (min-width: $desktop-width) {
-  .page-main {
-    &__header-title {
-      &--main {
-        width: 604px;
-        height: 112px;
-        color: $text-black;
-        font-size: 53px;
-        font-weight: 700;
-        line-height: 1.08;
-      }
-    }
-  }
-}
+// @media (min-width: $desktop-width) {
+//   .page-main {
+//     &__header-title {
+//       &--main {
+//         width: 604px;
+//         height: 112px;
+//         color: $text-black;
+//         font-size: 53px;
+//         font-weight: 700;
+//         line-height: 1.08;
+//       }
+//     }
+//   }
+// }
