--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -16,8 +16,9 @@
     display: block;
     min-height: 72px;
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 7px;
     margin-left: 90px;
+    padding-top: 8px;
 
     &::before {
       background: url("/img/icon-video.svg");
@@ -40,7 +41,7 @@
   }
 
   &__video-button {
-    width: 101px;
+    width: 112px;
     height: 77px;
     background-color: transparent;
     border: none;
@@ -49,7 +50,7 @@
   &__description {
     margin: 0;
     padding: 0;
-    padding-top: 26px;
+    padding-top: 15px;
     padding-right: 40px;
     padding-left: 33px;
   }
@@ -59,6 +60,7 @@
     font-size: 13px;
     font-weight: 400;
     line-height: 1.85;
+    margin-bottom: 24px;
   }
 }
 
