--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -5,14 +5,12 @@
     font-weight: 400;
     line-height: 2;
     margin: 0;
-    margin-bottom: 15px;
     padding: 0;
-    padding-top: 24px;
+    padding-top: 30px;
+    padding-bottom: 27px;
   }
 
   &__author {
-    width: 241px;
-    height: 45px;
     color: $text-black;
     font-size: 17px;
     font-weight: 700;
