--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -4,8 +4,10 @@
   margin: 0;
 }
 
-@mixin form-wrapper {
+@mixin container {
   width: 320px;
-  margin-left: 0;
-  margin-right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 30px;
+  padding-right: 30px;
 }
